--- a/app/src/main/res/layout-night/fragment_movie.xml
+++ b/app/src/main/res/layout-night/fragment_movie.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -33,39 +34,31 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/movieHeader"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:paddingTop="12dp"
+                android:paddingBottom="8dp"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:layout_weight="1">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="8dp"
-                    android:paddingHorizontal="@dimen/app_padding"
-                    android:layout_weight="1">
+                    android:text="@{movieViewModel.movieItem.mainTitle}"
+                    android:textColor="?attr/colorPrimaryDark"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textStyle="bold"
+                    android:textSize="20sp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@{movieViewModel.movieItem.mainTitle}"
-                        android:textColor="?attr/colorPrimaryDark"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textStyle="bold"
-                        android:textSize="20sp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="@{movieViewModel.movieItem.translatedTitle == null ? (movieViewModel.movieItem.episodeItem == null ? @string/movie : @string/series) : movieViewModel.movieItem.translatedTitle}" />
-
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="@{movieViewModel.movieItem.translatedTitle == null ? (movieViewModel.movieItem.episodeItem == null ? @string/movie : @string/series) : movieViewModel.movieItem.translatedTitle}" />
 
             </LinearLayout>
 
@@ -91,30 +84,19 @@
                     android:layout_marginEnd="10dp"
                     android:text="@{movieViewModel.movieItem.episodeItem != null ? ((@string/season).charAt(0) + Integer.toString(movieViewModel.movieItem.episodeItem.season) + `:` + (@string/episode).charAt(0) + Integer.toString(movieViewModel.movieItem.episodeItem.episode) + `, ` + @string/time + `: ` + movieViewModel.movieItem.time) : @string/time + `: ` + movieViewModel.movieItem.time}"/>
 
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:clickable="true"
-                    android:focusable="true"
+                    android:layout_height="40dp"
+                    android:text="@string/play"
+                    android:textStyle="bold"
+                    android:textColor="?attr/colorAccent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:paddingStart="7dp"
                     android:paddingEnd="11dp"
-                    android:onClick="@{() -> interactor.playBtnClicked(movieViewModel.movieItem.url, movieViewModel.movieItem.time)}"
-                    android:visibility="@{movieViewModel.movieItem.url == null ? View.GONE : View.VISIBLE}"
-                    android:gravity="end|center">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_play"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/play"
-                        android:textStyle="bold"
-                        android:textColor="?attr/colorAccent"/>
-
-                </LinearLayout>
+                    android:onClick="@{() -> interactor.playBtnClicked(movieViewModel.movieItem.netflixid, movieViewModel.movieItem.time)}"
+                    android:visibility="@{movieViewModel.movieItem.netflixid == null ? View.GONE : View.VISIBLE}"
+                    app:drawableStartCompat="@drawable/ic_play" />
 
             </LinearLayout>
 
