--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -10,7 +10,6 @@
 
     <androidx.core.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,20 +23,20 @@
             android:orientation="vertical"
             android:paddingBottom="60dp">
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/lyricatedBannerFragment"
                 android:name="com.whycody.wordslife.home.banner.main.MainBannerFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/currentLanguageFragment"
                 android:name="com.whycody.wordslife.current.language.CurrentLanguageFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"/>
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/searchFieldFragment"
                 android:name="com.whycody.wordslife.search.field.SearchFieldFragment"
                 android:layout_width="match_parent"
@@ -59,32 +58,21 @@
                 android:textStyle="bold"
                 android:text="@string/previous_words"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/searchFirstPhraseText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="15sp"
                 android:paddingHorizontal="@dimen/app_padding"
+                android:textColor="?attr/colorPrimaryVariant"
+                android:textStyle="bold"
+                android:text="@string/search_first_phrase"
+                android:gravity="center_vertical"
+                android:drawablePadding="8dp"
                 android:visibility="@{historyIsAvailable ? View.GONE : View.VISIBLE}"
-                android:orientation="horizontal">
+                app:drawableLeftCompat="@drawable/ic_round_arrow_upward_24" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_round_arrow_upward_24"/>
-
-                <TextView
-                    android:id="@+id/searchFirstPhraseText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="?attr/colorPrimaryVariant"
-                    android:layout_marginLeft="8dp"
-                    android:layout_gravity="center"
-                    android:textStyle="bold"
-                    android:text="@string/search_first_phrase"/>
-
-            </LinearLayout>
-
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="13dp"
