--- a/app/src/main/res/layout/fragment_study_mode_settings.xml
+++ b/app/src/main/res/layout/fragment_study_mode_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.core.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,7 +24,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/app_padding"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                tools:ignore="UseCompoundDrawables">
 
                 <TextView
                     android:layout_width="0dp"
@@ -40,6 +41,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
+                    android:contentDescription="@string/close"
                     android:src="@drawable/ic_arrow_down"/>
 
             </LinearLayout>
