--- a/app/src/main/res/layout/activity_choose_source.xml
+++ b/app/src/main/res/layout/activity_choose_source.xml
@@ -46,6 +46,7 @@
                         <ImageButton
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:contentDescription="@string/search"
                             android:src="@drawable/ic_search"
                             android:alpha="0.6"
                             android:paddingStart="16dp"
@@ -58,6 +59,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:hint="@string/search"
+                            android:importantForAutofill="no"
                             android:imeOptions="actionSearch"
                             android:background="@android:color/transparent"
                             android:paddingHorizontal="6dp"
@@ -72,6 +74,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:src="@drawable/ic_clear"
+                            android:contentDescription="@string/clear"
                             android:visibility="invisible"
                             android:alpha="0.6"
                             android:paddingEnd="16dp"
