--- a/app/src/main/res/layout/fragment_current_language.xml
+++ b/app/src/main/res/layout/fragment_current_language.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -10,8 +10,8 @@
             type="com.whycody.wordslife.data.Language" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".current.language.CurrentLanguageFragment"
@@ -30,11 +30,13 @@
                 style="@style/LanguageTextStyle"
                 android:text="@{mainLanguage.name}"
                 android:paddingStart="10dp"
-                android:textColor="?attr/colorPrimaryVariant"/>
+                android:textColor="?attr/colorPrimaryVariant"
+                tools:ignore="RtlSymmetry" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:contentDescription="@null"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:paddingStart="2dp"
@@ -46,6 +48,7 @@
 
         <ImageView
             android:id="@+id/switchLangsArrows"
+            android:contentDescription="@string/switch_languages"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/current_fragment_height"
             android:layout_marginStart="12dp"
@@ -64,6 +67,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:contentDescription="@null"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:paddingStart="6dp"
@@ -75,7 +79,8 @@
                 style="@style/LanguageTextStyle"
                 android:text="@{translationLanguage.name}"
                 android:paddingEnd="10dp"
-                android:textColor="?attr/colorPrimaryVariant"/>
+                android:textColor="?attr/colorPrimaryVariant"
+                tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
 
