--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingHorizontal="@dimen/app_padding"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                tools:ignore="UseCompoundDrawables">
 
                 <TextView
                     android:layout_width="0dp"
@@ -46,6 +47,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_gravity="center"
+                    android:contentDescription="@string/close"
                     android:src="@drawable/ic_arrow_down"/>
 
             </LinearLayout>
@@ -56,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
                 android:paddingHorizontal="@dimen/app_padding"
-                android:text="@string/clear"
+                android:text="@string/clear_filters"
                 android:textStyle="bold"
                 android:paddingVertical="10dp"
                 android:layout_marginBottom="5dp"
