--- a/app/src/main/res/layout/fragment_lyric_translation.xml
+++ b/app/src/main/res/layout/fragment_lyric_translation.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center"
+                android:contentDescription="@null"
                 android:src="@{translationItem.drawable}"/>
 
             <TextView
@@ -52,12 +53,13 @@
                 android:textColor="?attr/colorPrimaryDark"
                 android:layout_gravity="center"
                 android:gravity="center|start"
-                android:paddingStart="12dp"/>
+                android:paddingHorizontal="12dp"/>
 
             <ImageButton
                 android:id="@+id/playTTSBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/tts"
                 android:visibility="@{ttsAvailable ? View.VISIBLE : View.GONE}"
                 android:src="@drawable/ic_round_volume_up_24"
                 android:background="@android:color/transparent"/>
