--- a/app/src/main/res/layout/fragment_main_banner.xml
+++ b/app/src/main/res/layout/fragment_main_banner.xml
@@ -13,6 +13,7 @@
         android:paddingVertical="20dp"
         android:paddingHorizontal="@dimen/app_padding"
         android:src="@drawable/lyricated_writing"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/il_astronautsoon"
+        android:src="@drawable/il_astronaut"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="@id/lyricatedWriting"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
