--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:background="@drawable/s_time_backgr"
+                android:background="@drawable/s_time_background"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="@dimen/app_padding"
                 android:layout_marginEnd="@dimen/app_padding">
