--- a/app/src/main/res/layout/fragment_study_mode_translation.xml
+++ b/app/src/main/res/layout/fragment_study_mode_translation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -16,7 +17,6 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/app_padding"
@@ -42,12 +42,14 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:layout_gravity="center"
-                android:paddingLeft="@dimen/app_padding"
+                android:paddingStart="@dimen/app_padding"
+                android:contentDescription="@null"
                 android:paddingVertical="10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@{translationItem.drawable}"/>
+                android:src="@{translationItem.drawable}"
+                tools:ignore="RtlSymmetry" />
 
             <TextView
                 android:id="@+id/translationText"
@@ -60,7 +62,7 @@
                 android:textColor="?attr/colorPrimaryDark"
                 android:layout_gravity="center"
                 android:gravity="center|start"
-                android:paddingRight="@dimen/app_padding"
+                android:paddingEnd="@dimen/app_padding"
                 app:layout_constraintLeft_toRightOf="@id/flagImage"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -71,13 +73,15 @@
                 android:id="@+id/playTTSBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/tts"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:paddingRight="@dimen/app_padding"
+                android:paddingEnd="@dimen/app_padding"
                 android:visibility="@{ttsAvailable ? View.VISIBLE : View.GONE}"
                 android:src="@drawable/ic_round_volume_up_24"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                tools:ignore="RtlSymmetry" />
 
             <View
                 android:id="@+id/viewAboveTranslation"
