--- a/app/src/main/res/layout/item_configuration.xml
+++ b/app/src/main/res/layout/item_configuration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -31,7 +31,8 @@
                 android:textSize="15sp"
                 android:paddingStart="11dp"
                 android:paddingVertical="8dp"
-                android:textColor="?attr/colorPrimaryVariant" />
+                android:textColor="?attr/colorPrimaryVariant"
+                tools:ignore="RtlSymmetry" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -39,6 +40,7 @@
                 android:paddingHorizontal="4dp"
                 android:layout_marginVertical="9dp"
                 android:alpha="0.4"
+                android:contentDescription="@string/delete"
                 android:onClick="@{()->interactor.confRemoved(confItem)}"
                 android:src="@drawable/ic_clear"/>
 
