--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View"/>
@@ -42,6 +42,7 @@
             <ImageView
                 android:layout_width="34dp"
                 android:layout_height="match_parent"
+                android:contentDescription="@null"
                 android:src="@{language.drawable}"/>
 
             <TextView
@@ -53,7 +54,8 @@
                 android:paddingStart="25dp"
                 android:textSize="17sp"
                 android:gravity="center|start"
-                android:ellipsize="end"/>
+                android:ellipsize="end"
+                tools:ignore="RtlSymmetry" />
 
             <View
                 android:id="@+id/dot"
