--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <import type="android.view.View"/>
@@ -70,7 +71,7 @@
                             android:id="@+id/dot"
                             android:layout_width="12dp"
                             android:layout_height="10dp"
-                            android:background="@drawable/ic_light_arrowright"
+                            android:background="@drawable/ic_light_arrow_right"
                             android:alpha="@{!viewModel.resultsHidden &amp;&amp; (viewModel.thereAreMoreResults &amp;&amp; position==(viewModel.lyricItems.size()-1))? 0.15f : 1f}"
                             android:layout_gravity="center"
                             android:layout_marginStart="8dp"/>
@@ -82,7 +83,8 @@
                             android:maxLines="@{viewModel.resultsHidden || viewModel.thereAreMoreResults &amp;&amp; position==(viewModel.lyricItems.size()-1) ? 1 : 5}"
                             android:alpha="@{!viewModel.resultsHidden &amp;&amp; (viewModel.thereAreMoreResults &amp;&amp; position==(viewModel.lyricItems.size()-1))? 0.15f : 1f}"
                             android:textSize="13sp"
-                            android:text="@{lyricItem.translatedSentenceSpan}"/>
+                            android:text="@{lyricItem.translatedSentenceSpan}"
+                            tools:ignore="RtlSymmetry" />
 
                     </LinearLayout>
 
@@ -94,8 +96,10 @@
                     android:src="@drawable/ic_information"
                     android:alpha="@{!viewModel.resultsHidden &amp;&amp; (viewModel.thereAreMoreResults &amp;&amp; position==(viewModel.lyricItems.size()-1))? 0.15f : 1f}"
                     android:layout_gravity="center"
+                    android:contentDescription="@string/more_information"
                     android:padding="12dp"
-                    android:paddingStart="@dimen/app_padding" />
+                    android:paddingStart="@dimen/app_padding"
+                    tools:ignore="RtlSymmetry" />
 
             </LinearLayout>
 
@@ -105,6 +109,7 @@
             android:id="@+id/gradientImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@null"
             android:background="@drawable/s_search_alpha"
             android:onClick="@{()->viewModel.mainResultsHeaderClicked()}"
             android:visibility="@{viewModel.resultsHidden || viewModel.thereAreMoreResults &amp;&amp; position==(viewModel.lyricItems.size()-1) ? View.VISIBLE : View.GONE}"
