--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -14,79 +14,74 @@
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-        <LinearLayout
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:padding="@dimen/app_padding"
+            android:layout_marginBottom="4dp"
+            android:orientation="horizontal">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/headerLayout"
-                android:layout_width="match_parent"
+            <View
+                android:id="@+id/dot"
+                android:layout_width="9dp"
+                android:layout_height="9dp"
+                android:background="@drawable/circle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/invisibleTextView"
+                app:layout_constraintBottom_toBottomOf="@id/invisibleTextView" />
+
+            <TextView
+                android:id="@+id/headerText"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/app_padding"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal">
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:textColor="?attr/colorPrimaryVariant"
+                android:paddingHorizontal="@dimen/app_padding"
+                android:alpha="0.9"
+                android:text="@{header}"
+                app:layout_constraintLeft_toRightOf="@id/dot"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
 
-                <View
-                    android:id="@+id/dot"
-                    android:layout_width="9dp"
-                    android:layout_height="9dp"
-                    android:background="@drawable/circle"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/invisibleTextView"
-                    app:layout_constraintBottom_toBottomOf="@id/invisibleTextView" />
+            <ImageView
+                android:id="@+id/headerArrow"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:contentDescription="@null"
+                android:alpha="0.9"
+                android:src="@drawable/ic_arrow_down"
+                android:visibility="@{itemIsBtn ? View.VISIBLE : View.GONE}"
+                android:rotation="90"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                <TextView
-                    android:id="@+id/headerText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="15sp"
-                    android:textColor="?attr/colorPrimaryVariant"
-                    android:paddingStart="@dimen/app_padding"
-                    android:alpha="0.9"
-                    android:text="@{header}"
-                    app:layout_constraintLeft_toRightOf="@id/dot"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"/>
-
-                <ImageView
-                    android:id="@+id/headerArrow"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center"
-                    android:alpha="0.9"
-                    android:src="@drawable/ic_arrow_down"
-                    android:visibility="@{itemIsBtn ? View.VISIBLE : View.GONE}"
-                    android:rotation="90"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <TextView
-                    android:id="@+id/invisibleTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"
-                    android:textStyle="bold"
-                    android:textSize="22sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/sortOptionsRecycler"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/invisibleTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never"
-                android:nestedScrollingEnabled="false"/>
+                android:visibility="invisible"
+                android:textStyle="bold"
+                android:textSize="22sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/sortOptionsRecycler"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            android:nestedScrollingEnabled="false"/>
 
     </LinearLayout>
 
